# crypto_forecasting

./: .dockerignore  .sesskey  README.md  app.py  compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml
backend/data_stream/: __init__.py  data_charts.py  stream_prices.py
backend/predict_ml/: pred_chart.py  runner.py
backend/predict_ml/config/: .env  __init__.py  db_config.py  logger.py  model.py
backend/predict_ml/db/: __init__.py  crypto_data.db  db_model.py
backend/predict_ml/model/: __init__.py  model_service.py
backend/predict_ml/model/pipeline/: collection.py  model.py
backend/predict_ml/notebook/: notebook.ipynb
frontend/components/: __init__.py  crypto_cards.py  layout.py  pred_table.py
frontend/pages/: __init__.py  home_page.py  pred_page.py
